cluster/automation/mosquitto/deployment-b.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto-b
spec:
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - image: eclipse-mosquitto:2.0.12
          name: mosquitto
          ports:
            - containerPort: 1883
            - containerPort: 9001
          volumeMounts:
          - mountPath: /mosquitto/data
            name: data
          - mountPath: /mosquitto/config
            name: config
          command:
            - mosquitto 
          args:
            - -c 
            - /mosquitto/config/mosquitto.conf
      volumes:
      - name: config
        configMap:
          name: bridge-conf
      securityContext:
        runAsUser: 1883
        runAsGroup: 1883
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values: [mosquitto]
            topologyKey: kubernetes.io/hostname
