cluster/automation/mosquitto/service-p.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-p
spec:
  ports:
  - name: mqtt
    port: 1883
    targetPort: 1883
  selector:
    app: mosquitto
    type: primary
