cluster/automation/mosquitto/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  annotations:
    coredns.io/hostname: mqtt
spec:
  ports:
  - name: mqtt
    port: 1883
    targetPort: 1883
  selector:
    sko.ai/name: mosquitto
  type: LoadBalancer
  externalTrafficPolicy: Local
  externalIPs:
  - ${EI_MQTT}
